# Karma

./: .gitmodules  CMakeLists.txt  README.md  demo_raft_server.h  design.md  global_manager.h  main.cc  temp.h
benchmark/: CMakeLists.txt  cli_benchmark.cc  sb.cc  sivir_benchmark.cc
cmake/: compiler_settings.cmake  local_package.cmake  third_party_package.cmake
config/: karma-1.toml  karma-2.toml  karma-3.toml  karma.ini  karma.toml
docs/: kfp.md
karma-cache/: ring_buffer.h  s3fifo.h  s3fifo_cache.h
karma-cli/: CMakeLists.txt  cli.cc  main.cc
karma-client/: CMakeLists.txt  client.cc  client.h  client_task.h  composite_session.cc  composite_session.h  error.h  header.h  invocation_context.h  payload.h  request.cc  request.h  session.cc  session.h  session_manager.cc  session_manager.h
karma-client/tasks/: append_entry_task.cc  append_entry_task.h  cli_echo_task.cc  cli_echo_task.h  cli_read_task.cc  cli_read_task.h  cli_write_task.cc  cli_write_task.h  echo_task.cc  echo_task.h  forward_append_entry_task.h  forward_cli_write_task.h  forward_read_barrier_task.h  read_quorum_task.cc  read_quorum_task.h  read_task.cc  read_task.h  task.h  time_out_task.cc  time_out_task.h  vote_task.cc  vote_task.h  write_task.cc  write_task.h
karma-hashmap/: hot_ring.h
karma-raft/: CMakeLists.txt  common.h  fsm.cc  fsm.h  fsm.hh  log.cc  log.h  log.hh  logical_clock.hh  raft.cc  raft.h  raft.hh  rpc_message.h  server.cc  server.h  server.hh  server_impl.cc  server_impl.h  simple_server.hh  tracker.cc  tracker.h  tracker.hh
karma-raft2/: common.h  fsm.h  logical_clock.h  server_impl.h  tracker.cc  tracker.h
karma-service/: CMakeLists.txt  config.h  raft_server.cc  raft_server.h  raft_server.hh  server.h  session.cc  session.h  worker.cc  worker.h
karma-service/cmd/: command.h  heartbeat.h
karma-service/handler/: handler.h
karma-service/raft/: raft_failure_detector.h  raft_group_registry.h  raft_mm.h  raft_persistence.h  raft_rpc.h  raft_state_machine.h  rocksdb_persistence.h  temp_persistence.h
karma-service/test/: CMakeLists.txt  test.cc
karma-session/: CMakeLists.txt  request_session.h  request_session_manager.h  response_session.h
karma-store/: CMakeLists.txt  README.md  common.h  db.h  io.h  memtable.h  options.h  record.h  s3_cache.h  segment_file.cc  segment_file.h  sivir.cc  sivir.h  store.h  wal.cc  wal.h  write_window.cc  write_window.h
karma-store/buf/: aligned_buf.h  aligned_buf_reader.h  aligned_buf_writer.h
karma-transport/: CMakeLists.txt  connection.cc  connection.h  error.h  frame.cc  frame.h  write_task.h
karma-util/: CMakeLists.txt  coding.cc  coding.h  common.h  crc32c.cc  crc32c.h  result.h  sslice.h
protocol/: rpc_generated.h
protocol/fbs/: rpc.fbs
raft/: CMakeLists.txt  common.h  fsm.cc  fsm.h  log.cc  log.h  logical_clock.h  raft.h  rpc_message.h  server.h  server_impl.cc  server_impl.h  tracker.h
scripts/: format_count.sh  gen_fbs.sh
scylladb-raft/: CMakeLists.txt  fsm.cc  fsm.hh  internal.hh  log.cc  raft.hh  server.cc  server.hh  server_impl.cc  simple_server.hh  tracker.cc
service/raft/: raft_group_registry.h  raft_rpc.h  rocksdb_persistence.h
sivir/: align_buf.h  options.h  sivir.h  wal.h
temp/: 0  1048576  2097152
temp2/: temp
test/: CMakeLists.txt
test/3rd-part/: CMakeLists.txt  flatbuffer.cc
test/raft/: CMakeLists.txt  fsm_test.cc
test/test-karma-client/: CMakeLists.txt  client_test.cc
test/test-karma-raft/: CMakeLists.txt  fsm_test.cc  helper.cc  helper.h  logical_timer.hh  randomized_nemesis_test.cc  replication.h  ticker.h
test/test-karma-service/: test.cc
test/test-karma-store/: CMakeLists.txt  db_test.cc  kv_test.cc
test/test-karma-transport/: CMakeLists.txt  connection_test.cc  frame_test.cc  transport_test.cc
test/test-scylladb-raft/: etcd_test.cc  fsm_test.cc  helpers.cc  helpers.hh  server_test.cc  server_test.hh  server_test2.hh
test/test-sivir/: client_test.cc
tool/: async.cc
transport/: connection.h  frame.h  write_task.h
util/: result.h
