file(GLOB_RECURSE BENCHMARK_HEADERS "*.h")
file(GLOB_RECURSE BENCHMARK_SRCS "*.cc")

message(STATUS "BENCHMARK_HEADERS: ${BENCHMARK_HEADERS}")
message(STATUS "BENCHMARK_SRCS: ${BENCHMARK_SRCS}")

add_executable(${KARMA_BENCH} ${BENCHMARK_HEADERS} ${BENCHMARK_SRCS})
target_include_directories(${KARMA_BENCH} PRIVATE . ${CMAKE_SOURCE_DIR} ${CO_CONTEXT_DIR})
target_link_libraries(${KARMA_BENCH} ${CO_CONTEXT} ${KARMA_STORE} ${KARMA_CLIENT}  )
