file(GLOB_RECURSE CLIENT_HEADERS "*.h")
file(GLOB_RECURSE CLIENT_SRCS "*.cc")

message(STATUS "CLIENT_HEADERS: ${CLIENT_HEADERS}")
message(STATUS "CLIENT_SRCS: ${CLIENT_SRCS}")

add_executable(${KARMA_CLI} ${CLIENT_HEADERS} ${CLIENT_SRCS})
target_include_directories(${KARMA_CLI} PRIVATE . ${CMAKE_SOURCE_DIR} ${CO_CONTEXT_DIR})
target_link_libraries(${KARMA_CLI} ${CO_CONTEXT} ${KARMA_CLENT} ${KARMA_TRANSPORT})
